# openclaw-voice-client

./: .gitignore  PLAN.md  README.md  package-lock.json
.github/workflows/: build-desktop.yml  build.yml
clients/voice-client-desktop/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/voice-client-desktop/src/: popup.css  popup.html  popup.ts  settings.css  settings.html  settings.ts  theme.css  types.ts
clients/voice-client-desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
clients/voice-client-desktop/src-tauri/capabilities/: default.json
clients/voice-client-desktop/src-tauri/icons/: icon.icns
clients/voice-client-desktop/src-tauri/src/: api.rs  audio.rs  commands.rs  lib.rs  main.rs  settings.rs  sse.rs  types.rs
clients/voice-client-desktop/src/main/: index.ts  ipc.ts  preload.ts  store.ts  tray.ts
clients/voice-client-desktop/src/renderer/popup/: App.css  App.tsx  index.html  useAudio.ts
clients/voice-client-desktop/src/renderer/settings/: Settings.tsx  index.html  index.tsx
clients/voice-client-desktop/src/shared/: api.ts  types.ts
extensions/voice-client/: README.md  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  tsconfig.json
extensions/voice-client/src/: agent-service.ts  channel.ts  http-handler.ts  session-manager.ts  sse.ts  stt-service.ts  types.ts
extensions/voice-client/src/__tests__/: agent-service.test.ts  http-handler.test.ts  smoke.test.ts  sse.test.ts
