[package]
name = "openclaw-voice-client"
version = "1.0.0"
edition = "2021"
default-run = "openclaw-voice-client"

[lib]
name = "openclaw_voice_client"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw-voice-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
cpal = "0.17"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
